# checkride-copilot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: icp.md
.claude/commands/: rewrite-proc.md
.github/workflows/: release.yml
airframe_data/fa18c/: build_index.py  cockpit_index.json  switches.json
collector/: http_api.py  main.py  normalizer.py  state_store.py  udp_server.py
data/: airfield_frequencies_by_map.json  airfields_by_map.json
data/airframes/fa18c/: actions.json  build_index.py  build_procedures.py  cockpit_index_raw.json  proc_groups.json  switches.json  voice_procedures.py  weapon_rules.json
data/airframes/fa18c/procedures/: index.json
data/airframes/fa18c/procedures/comms/: arc_210_radio_tutorial.json
data/airframes/fa18c/procedures/emergency/: engine_relight_procedure.json
data/airframes/fa18c/procedures/general/: air_to_air_weapons.json  air_to_ground_weapons.json
data/airframes/fa18c/procedures/navigation/: a_a_waypoints_bullseye.json  agm_154a_jsow_too_waypoint_designate.json  agm_84d_harpoon_r_bl_waypoint_designate.json  too_waypoint.json  too_waypoint_547.json  waypoint_slaved.json  waypoint_slaved_318.json
data/airframes/fa18c/procedures/normal_ops/: a_lat_long_coordinates.json  acls_automatic_carrier_landing_system_tutorial_case_iii_recovery.json  carrier_takeoff.json  (+23 more)
data/fa18c/: procedures.json  system_facts.json
dcs/: Export.lua
diagnostic/: action_map.py  engine.py
diagnostic/rules/: __init__.py  fa18c_sensors.py  fa18c_startup.py  fa18c_weapons.py
docs/: build-plan.md  ingestion-schema.md
mission/: frequencies.py
orchestrator/: __init__.py  icp.py  llm.py  nav_intercept.py  orchestrator.py  session.py  tools.py
retrieval/: chunks.json  cockpit_lookup.py  ingest.py  keybinds.py  search.py
scripts/: install.py  monitor.py  scrape_atc_frequencies.py  setup.ps1  slice1_test.py  voice_demo.py  voice_spike_llm_first.py
tests/: test_cockpit_lookup.py  test_control_bindings.py  test_diagnostic.py  test_llm_docs_fallback.py  test_llm_fast_paths.py  test_mission_frequencies.py  test_normalizer.py  test_procedure_lookup.py  test_procedure_step_more_info.py  test_quick_actions.py  test_stt_context.py  test_tts_normalization.py  test_voice_corrections.py
tests/fixtures/: sample_export_packet.json  sample_state_ready.json  sample_state_safe.json
voice/: corrections.py  glossary.py  stt.py  stt_parakeet.py  tts.py
(+106 files in other folders)
